full-moon/tests/cases/fail/parser/local-assignment-6/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/local-assignment-6
---
error[ast]: expected an expression
  ┌─ source.lua:1:9
  │
1 │ local x =
  │         ^


